Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-33928

Assertion failure on wsrep_thd_is_aborting

    XMLWordPrintable

Details

    Description

      For some reason 10.4 and 10.5 are different compared to 10.6 where we have

      mysql_mutex_assert_owner(&thd->LOCK_thd_data);
      

      This function accesses THD variables so this requirement is correct except when called holding lock_sys mutex or latch, because then transaction and it's thd cant be freed and wsrep state change is not possible.

      Attachments

        Activity

          People

            sysprg Julius Goryavsky (Inactive)
            janlindstrom Jan Lindström
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.